# MM-edgeDP

./: .gitignore  KL_perturb3.ipynb  README.md  baseline.py  baselines.py  basic.ipynb  experiments.py  kl_perturb.ipynb  kl_perturb_multi_dataset.ipynb  pyproject.toml  requirements-colab.txt  results.ipynb  sweep.py
archive/: KL_perturb2.ipynb  KL_perturb3.ipynb  baseline.py  basic.ipynb  pyproject.toml
archive/mm_edgedp/: __init__.py
archive/mm_edgedp/dp/: __init__.py
archive/notebooks/: query_norm_rescue_ablation_colab.ipynb  query_norm_rescue_ablation_colab.py
archive/scripts/: __init__.py  run_experiment.py
configs/: paper_protocol_v1.json  sweep_phase1.json  sweep_phase2.json
configs/base/: dataset_ogbn_arxiv.json  mechanism_default.json  trainer_default.json
configs/experiments/: paper_v1_defensible.json
configs/sweeps/: epsilon_grid_small.json  query_norm_rescue_v1.json
configs/tracks/: defensible.json  exploratory.json
mm_edgedp/: config.py  runner.py
outputs/: baseline_results.csv  sweep_phase1.csv  sweep_phase1_old.csv  sweep_phase2.csv  sweep_phase2_pf05.csv  sweep_phase2_pf20.csv  sweep_results_kcenter_0.5.csv  sweep_results_kcenter_false.csv
outputs/paper_v1_defensible/: metrics.json  resolved_config.json
scripts/: run_sweep.py
