[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-dp"
version = "0.1.0"
description = "Baseline models for the Clinical-DP project"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "ogb>=1.3.6",
  "scikit-learn>=1.3",
  "torch>=2.2",
  "torch-geometric>=2.5",
]

[project.scripts]
clinical-dp-baseline = "baseline:main"

[tool.setuptools]
py-modules = ["baseline"]
